# LibraryTemplate

./: .gitignore  CMakeLists.txt  library.h
cmake/: CMakeLists.txt
include/LibraryTemplate/: LibraryTemplate.h
src/: library.cpp  library.h
testing/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
