if(NOT PLATFORM)
    set(PLATFORM ${CMAKE_SYSTEM_NAME})
    string(TOLOWER ${PLATFORM} PLATFORM)
endif()
if (PLATFORM STREQUAL "android")
    set(ARCHITECTURE ${ANDROID_ABI})
    set(PLATFORM ${PLATFORM}${ANDROID_VERSION})
    add_definitions(-DPLATFORM_ANDROID -DARCHITECTURE=${ANDROID_ABI} -DANDROID_VERSION=${ANDROID_VERSION})
else()
    set(ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
    string(TOLOWER ${ARCHITECTURE} ARCHITECTURE)
    add_definitions(-DPLATFORM_${PLATFORM} -DARCHITECTURE=${CMAKE_SYSTEM_PROCESSOR})
endif()

set_target_properties(${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/${PLATFORM}-${ARCHITECTURE})
set_target_properties(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/${PLATFORM}-${ARCHITECTURE})
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/${PLATFORM}-${ARCHITECTURE})
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
target_include_directories(${PROJECT_NAME} PUBLIC ../include)
function(AddLibrary name)
    target_include_directories(${PROJECT_NAME} PUBLIC $ENV{DEPENDENCIES_HOME}/${ARGV0}/include)
    target_link_libraries(${PROJECT_NAME} $ENV{DEPENDENCIES_HOME}/${ARGV0}/build/${PLATFORM}-${ARCHITECTURE}/${ARGV0})
endfunction()