cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 17)
project(LibraryTest)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(LibraryTest LibraryTemplate)
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/../build")
set_target_properties(${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/../build")
